// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSignatureService should add signature 1`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "7395fb8f6d92a80afc28047e07ce3be4cd2beb4be11d36584961b7c6c3ddd664",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "",
      "9ccc8d65bfc3b777217ac8670b2e511f854c160e6a00b8e9a0869016657b97fbe115811e6229a4e8c8e46990d6e2603f796d108837c5b09d13f6ed6dad08ab0c",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "7395fb8f6d92a80afc28047e07ce3be4cd2beb4be11d36584961b7c6c3ddd664",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "7395fb8f6d92a80afc28047e07ce3be4cd2beb4be11d36584961b7c6c3ddd664",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "",
      "9ccc8d65bfc3b777217ac8670b2e511f854c160e6a00b8e9a0869016657b97fbe115811e6229a4e8c8e46990d6e2603f796d108837c5b09d13f6ed6dad08ab0c",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;

exports[`MultiSignatureService should add signature 2`] = `
SignedTransactionData {
  "bigNumberService": BigNumberService {
    "configRepository": ConfigRepository {},
  },
  "broadcastData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "9b251f6caf03725dcf6514dae3b147953fec70caff9db332953a1a02573e729d",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "3760f52b99f5c78b4cd3f46374baef1774279c876d9f23abef50b60670983916c3d69a33f8dd51acb7ef9ee30c6704e0d31bfbd9a42b5f17ba1d6ac6d4811505",
      "9ccc8d65bfc3b777217ac8670b2e511f854c160e6a00b8e9a0869016657b97fbe115811e6229a4e8c8e46990d6e2603f796d108837c5b09d13f6ed6dad08ab0c",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
  "decimals": 8,
  "identifier": "9b251f6caf03725dcf6514dae3b147953fec70caff9db332953a1a02573e729d",
  "signedData": Object {
    "asset": Object {
      "amount": "100000000",
      "data": "",
      "recipientAddress": "lskp4agpmjwgw549xdrhgdt6dfwqrpvohgbkhyt8p",
    },
    "assetID": 0,
    "fee": "1000000000",
    "id": "9b251f6caf03725dcf6514dae3b147953fec70caff9db332953a1a02573e729d",
    "moduleID": 2,
    "multiSignature": Object {
      "mandatoryKeys": Array [
        "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
        "5f7f98c50575a4a7e70a46ff35b72f4fe2a1ad3bc9a918b692d132d9c556bdf0",
      ],
      "numberOfSignatures": 2,
      "optionalKeys": Array [],
    },
    "nonce": "8",
    "senderPublicKey": "ac574896c846b59477a9115b952563938c48d0096b84846c0b634a621e1774ed",
    "signatures": Array [
      "3760f52b99f5c78b4cd3f46374baef1774279c876d9f23abef50b60670983916c3d69a33f8dd51acb7ef9ee30c6704e0d31bfbd9a42b5f17ba1d6ac6d4811505",
      "9ccc8d65bfc3b777217ac8670b2e511f854c160e6a00b8e9a0869016657b97fbe115811e6229a4e8c8e46990d6e2603f796d108837c5b09d13f6ed6dad08ab0c",
    ],
    "timestamp": "2021-01-01T12:00:00.000Z",
  },
}
`;
